<resources>
    <string name="app_name">Noty</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>

    <string name="menu_home">Home</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="content_empty">Contents cannot be empty</string>
    <string name="no_notes">No notes have been added yet, add one by clicking + button below</string>
</resources>
