<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/notesListFragment"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/menu_notes"/>
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_alarm_black_24dp"
            android:title="@string/menu_reminders"/>
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/menu_import"/>
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_file_upload_black_24dp"
            android:title="@string/menu_export"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings"/>
    </group>

</menu>
