<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteDetailsTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:paddingTop="@dimen/margin_standard_half"
            android:paddingBottom="@dimen/margin_standard_half"
            android:inputType="textPersonName|textNoSuggestions"
            android:hint="@string/title"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_standard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleInputLayout"
        app:layout_constraintBottom_toTopOf="@+id/save">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteDetailsContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="top"
            android:inputType="textMultiLine|textNoSuggestions"
            android:paddingTop="@dimen/margin_standard_half"
            android:paddingBottom="@dimen/margin_standard_half"
            android:hint="@string/content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"/>

</androidx.constraintlayout.widget.ConstraintLayout>